# HPCLab

./: README.md
A1/figs/: Readme
A1/report/: Makefile  myref.bib  report.tex
A1/src/2dconv/: CMakeLists.txt  README.md  conv_env.sh
A1/src/2dconv/common/: compute_kernels_default.cpp  compute_kernels_default.h  helper.cpp  helper.h  image.h
A1/src/2dconv/scripts/: job.sh
A1/src/2dconv/simd/: CMakeLists.txt  convolution.cpp
A1/src/2dconv/src/: compute_kernels.h  main.cpp
A2/: README.md
A2/report/: myref.bib  report.tex
A3/: README.md
A3/report/: Network_topology.dia  Network_topology.tex  myref.bib  report.tex
A3/scripts/: plot.py  plot4.py  submit_421.sh  submit_424.sh
A4/: README.md
A4/report/: myref.bib  report.tex
heat_eq/: Makefile  README.md  report.md
heat_eq/result_logs/: .re72_hybrid_2node_alldata.txt.swp  non_optimized_results.txt  re71_strongscale_1nodes_alldata.txt  re71_strongscale_1nodes_blocking_alldata.txt  re71_strongscale_1nodes_blocking_perf.txt  re71_strongscale_1nodes_blocking_time.txt  re71_strongscale_1nodes_perf.txt  re71_strongscale_1nodes_time.txt  re71_strongscale_2nodes_alldata.txt  re71_strongscale_2nodes_blocking_alldata.txt  re71_strongscale_2nodes_blocking_perf.txt  re71_strongscale_2nodes_blocking_time.txt  re71_strongscale_2nodes_perf.txt  re71_strongscale_2nodes_time.txt  re71_strongscale_3nodes_alldata.txt  re71_strongscale_3nodes_blocking_alldata.txt  re71_strongscale_3nodes_blocking_perf.txt  re71_strongscale_3nodes_blocking_time.txt  re71_strongscale_3nodes_perf.txt  (+20 more)
project/: README.md
(+344 files in other folders)
